--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
                 <center><button type="submit" class="btn btn-light btn-outline-success" id="sendMessageButton">Get Analysis</button></center>
                 <br>
                 <center><a href="/"><h6 style="color: red" >{{ error }}</h6></a></center>
-                <a href="https://bit.ly/2Ky3ho6" class="fa fa-linkedin-square" style="font-size:36px" target="_black"></a>
-                <a href="https://bit.ly/2yoggit" class="fa fa-github" style="font-size:36px" target="_black"> </a>
-                <a href="https://bit.ly/3dbLJLC" class="fa fa-twitter-square" style="font-size:36px" target="_black"> </a>
-                <a href="https://bit.ly/32SXHV0" class="fa fa-instagram" style="font-size:36px" target="_black"></a>
+                <a href="https://www.linkedin.com/in/dhivyaranjanip/" class="fa fa-linkedin-square" style="font-size:36px" target="_black"></a>
+                <a href="https://github.com/DhivyaranjaniParamasivam" class="fa fa-github" style="font-size:36px" target="_black"> </a>
+                <a href="https://twitter.com/" class="fa fa-twitter-square" style="font-size:36px" target="_black"> </a>
+                <a href="https://www.instagram.com/" class="fa fa-instagram" style="font-size:36px" target="_black"></a>
 
             </form>  
         </div>
